src/main/resources/single-pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: pod-test
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
